--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.1.0",
     "formik": "^2.4.5",
     "nanoid": "^5.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.4",
     "yup": "^1.3.3"
   },
