--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=3000
-NEXT_PUBLIC_BASE_API_URL=http://localhost:4000/
+NEXT_PUBLIC_BASE_API_URL=https://vercel.com/olehas-projects/chat-back/ACBDMMsht4SHvnh6yiYk9n7Wsgw2
+
 
 # =================================================================
 NEXTAUTH_URL=http://localhost:3000
