--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 PORT=3000
 NEXT_PUBLIC_BASE_API_URL=https://vercel.com/olehas-projects/chat-back/ACBDMMsht4SHvnh6yiYk9n7Wsgw2
-
-
 # =================================================================
 NEXTAUTH_URL=http://localhost:3000
+# NEXTAUTH_URL=http://localhost:3000
